--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -2223,10 +2223,10 @@
                 There are many variations of passages of Lorem Ipsum available,
                 but the.There are many variations of passages
             </p>
-            <img src="../../../assets/images/icon-facebook.svg" alt="">
-            <img src="../../../assets/images/icon-instagram.svg" alt="">
-            <img src="../../../assets/images/icon-pinterest.svg" alt="">
-            <img src="../../../assets/images/icon-twitter.svg" alt="">
+            <img src="../../assets/images/icon-facebook.svg" alt="">
+            <img src="../../assets/images/icon-instagram.svg" alt="">
+            <img src="../../assets/images/icon-pinterest.svg" alt="">
+            <img src="../../assets/images/icon-twitter.svg" alt="">
             
 
         </div>
