--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -15,12 +15,14 @@
             <source src="../../assets/images/Pattern - 85590.mp4" type="video/mp4">
         </video>
     </div>
+    <!-- allnav -->
     <div class="totalnav">
         <div class="headvideo1">
             <video autoplay muted loop id="myVideo">
                 <source src="../../assets/images/Pattern - 85590.mp4" type="video/mp4">
                 <track default/>
             </video>
+        </div>
         <!-- navbar1 -->
         <div class="navbar">
             <div class="topic">
