--- a/pages/your opinion/join now thank.html
+++ b/pages/your opinion/join now thank.html
@@ -15,6 +15,7 @@
             <track default/>
         </video>
         <!-- navbar1 -->
+
         <div class="navbar">
           <div class="topic">
             <h1>POLITIFACT</h1>
@@ -26,6 +27,7 @@
           </div>
         </div>
         <!-- navbar2 -->
+
         <div class="navbar1">
           <div class="input">
             <input type="text" placeholder="search">
@@ -65,6 +67,7 @@
         </div>
       </div>
       <!-- start thanks page -->
+
     <div class="thanks">
         <h1>Thank You</h1>
         <p>Your Join was completled successfully.</p>
@@ -75,7 +78,7 @@
         </div>
         <button><a href="../../index.html">Continue</a></button>
     </div>
-      <!-- footer -->
+      <!-- footer page start -->
       <div class="footer">
         <div class="foot">
             <h1>politic</h1>
