--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     <!-- background vidieo -->
     <div class="headvideo">
         <video autoplay muted loop id="myVideo">
-            <source src="assets/images/Indian - 40553.mp4" type="video/mp4">
+            <source src="assets/images/Flag - 117755.mp4" type="video/mp4">
             <track default>
         </video>
     </div>
-
     <!-- navbar all -->
 
     <div class="totalnav">
@@ -33,29 +32,26 @@
                 <h1>POLITIFACT</h1>
             </div>
             <div class="topic1">
-                <p><a style="text-decoration: none;" href="">contact</a></p>
+                <p><a style="text-decoration: none;" href="pages/your opinion/join now.html">contact</a></p>
                 <p>|</p>
-                <p><a style="text-decoration: none;" href="">feedback</a></p>
+                <p><a style="text-decoration: none;" href="pages/your opinion/your opnion.html">feedback</a></p>
             </div>
         </div>
 
         <!-- navbar1 -->
         <div class="navbar1">
 
-            <div class="headvideo1">
-                <video autoplay muted loop id="myVideo">
-                    <source src="assets/images/Pattern - 85590.mp4" type="video/mp4">
-                    <track default />
-                </video>
-            </div>
-
             <div class="input">
                 <input type="text" placeholder="search">
                 <img src="assets/images/3917132.svg" width="20px" height="20px" alt="">
             </div>
+
             <div class="nav">
+
                 <nav aria-label="nav-menu">
+
                     <ul>
+
                         <li><a href="index.html">Home</a></li>
                         <li><a href="pages/portfolio/potfolio.html">Portfolio</a></li>
                         <div class="dropdown">
@@ -87,24 +83,30 @@
         </div>
     </div>
 
-
     <!-- section1 -->
     <div class="section1">
         <h1>
             you must be the<br> change you wish to see in the world
         </h1>
+
         <p>
             Real change from the status quo will never come from
             electing a politician -especilly not one who leads a that<br> status party dedicated to uppholiding that
             status quo.
         </p>
+
         <button><a href="pages/your opinion/your opnion.html">your opnion</a></button>
+
     </div>
     <!-- section2 -->
     <div class="section2">
+
         <h1>welcome to politifact</h1>
+
         <img src="assets/images/Capture.PNG" alt="">
+
         <div class="box">
+
             <div class="content1">
                 <h2>poltifact</h2>
                 <p>WE have to shed mutual bickering, shed the difference
@@ -122,11 +124,15 @@
     <!-- section3 -->
     <div class="section3">
         <div class="content">
+
             <p>OUR CAMPAIGN IS POWERED<br> BY CONTRIBUTIONS
                 FROM SUPPORTERS LIKE YOU
             </p>
+
             <hr>
+
             <h1>Become A <span> Volunteer</span></h1>
+
             <h2>Just because you do not take an interest in politics doesn't mean politics won't<br>
                 azer duskam take an interest in you
             </h2>
@@ -134,25 +140,33 @@
         </div>
         <!-- section4 -->
         <div class="section4">
+
             <div class="num1">
                 <h1>0k</h1>
                 <p>active Volunteer</p>
             </div>
+
             <hr>
+
             <div class="num1">
                 <h1>131</h1>
                 <p>campage now</p>
             </div>
+
             <hr>
+
             <div class="num1">
                 <h1>612</h1>
                 <p>area coverage</p>
             </div>
+
             <hr>
+
             <div class="num1">
                 <h1>2</h1>
                 <p>project done</p>
             </div>
+
         </div>
 
     </div>
@@ -160,29 +174,35 @@
 
     <!-- section5 -->
     <div class="section5">
+
         <h2 class="head">latest politics news</h2>
+
         <div class="news">
+
             <div class="news1">
                 <img src="assets/images/backround.jpg" width="300pxpx" alt="error image">
                 <h2>politics</h2>
                 <p>mlmf;ldk;lfk;dkfjfnkvnfnv;lknf;lkvmoifm</p>
             </div>
+
             <div class="news1">
                 <img src="assets/images/backround.jpg" width="300pxpx" alt="error image">
                 <h2>politics</h2>
                 <p>lkf;mflknlkjnflkvnfkblkmnblkjfn<br>l;kmglfdml;mflkm,fvm,fm;lvkmdf;km;lfkvm;lf
-
                 </p>
             </div>
+
             <div class="news1">
                 <img src="assets/images/backround.jpg" width="300px" alt="error image">
                 <h2>politics</h2>
                 <p>mflfdklkdf;lvmdfjmclkdmfnpoj</p>
             </div>
+
         </div>
     </div>
-    <!-- footer -->
+    <!-- footer  section-->
     <div class="footer">
+
         <div class="foot">
             <h1>politic</h1>
             <p>
@@ -196,6 +216,7 @@
             <img src="assets/images/icon-twitter.svg" alt="error image">
 
         </div>
+
         <div class="foot1">
             <h1>IMPORTANT INFO</h1>
             <p>About Us</p>
@@ -203,6 +224,7 @@
             <p>Our Approch</p>
             <p>Statistics</p>
         </div>
+
         <div class="foot1">
             <p>IMPORTANT INFO</p>
             <p>Donet</p>
@@ -210,6 +232,7 @@
             <p>Volunteer form</p>
             <p>bloger</p>
         </div>
+
         <div class="foot1">
             <h1>instagram </h1>
             <p>not available for this page</p>
