--- a/pages/your opinion/your opnion.html
+++ b/pages/your opinion/your opnion.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- total nav bar -->
     <div class="totalnav">
         <div class="headvideo1">
             <video autoplay muted loop id="myVideo">
@@ -66,6 +67,10 @@
             </div>
         </div>
     </div>
+
+    <!-- main page start1 -->
+
+
     <!-- start opinion quiestion answer page -->
     <div class="opinionpoll">
         <form action=""><br><br>
@@ -113,7 +118,7 @@
             <button><a href="../../index.html">Submit</a></button>
         </form>
     </div>
-    footer
+    <!-- footer page start -->
     <div class="footer">
         <div class="foot">
             <h1>politic</h1>
